start promotions use case